# nixos-hwc

./: .gitattributes  .gitignore  .mcp.json  .mcp.laptop.json  .mcp.server.json  AGENIX_MIGRATION_GUIDE.md  AGENTS.md  AUDIT_INDEX.md  BRANCH_RISK_ANALYSIS.md  CHARTER-v12-DRAFT.md  CHARTER.md  CHARTER_V3_DOMAIN_SEPARATION_RULES.md  CHARTER_V3_MIGRATION_PLAN.md  CLAUDE.md  CUTOVER_REPORT.md  DDD-REFACTOR-PLAN.md  EMAIL_ARCHITECTURE_ANALYSIS.md  EMAIL_MIGRATION_CHANGELOG.md  EMAIL_MIGRATION_PLAN.md  EMAIL_SYSTEM_DOCUMENTATION.md  FILESYSTEM-CHARTER.md  FILESYSTEM_CHARTER.md  GEMINI.md  IMPROVEMENTS-2025-11-19.md  INSTALL.md  MAILBOX_NUMBERING_GUIDE.md  MIGRATION_LOG.md  PHASE2_TEST_REPORT.md  PHASE_1_COMPLETION_LOG.md  PHASE_2_1_COMPLETION_LOG.md  PHASE_3_COMPLETION_LOG.md  QUICK_REFERENCE.md  README  README.backup  README.md  REFACTORING_CHECKLIST.md  SYSTEMD_REFACTORING_PROPOSALS.md  TAXONOMY.md  TDARR-QUICK-START.md  VERIFICATION_REPORT.md  (+23 more)
.backups/: nixos-backup-20260120-211957  pre-xps-switch-20260120-211957.txt
.claude/: FAILURE-ANALYSIS.md  MCP-SERVERS.md  README.md  settings.local.json  setup-autopush.sh  setup-mcp-for-machine.sh
.lint-reports/: lint_20250928_012245_main_fadda85.txt  lint_20250928_014159_main_fadda85.txt  lint_20250928_145423_main_00cc6f6.txt
.script-inventory/: SUMMARY.md  executable-python.txt  executable-shell.txt  location-analysis.txt  nix-scripts.txt  python-scripts.txt  shebang-bin-bash.txt  shebang-env-bash.txt  shebang-env-python.txt  shell-scripts.txt
Reader-Rabbit-2_DOS_EN_v101/: RR2.BAT  file_id.diz
Super-Solvers-Gizmos-Gadgets_DOS_EN/: Read_1st.txt  ssg.bat
ai_agents/: gemini-hwc-troubleshooter.md
charter/: GEMINI.md  charter.md  compliance-lint.md
ci/: checks.sh
comparison-results/: comparison-report.md  production-config.txt  refactor-config.txt  refactor-modules.txt  refactor-profiles.txt
docs/: ARCHITECTURE.md  CHANGES-SUMMARY.md  CHARTER_MIGRATION_GUIDE.md  CHARTER_V4_MIGRATION_COMPLETE.md  CHARTER_v4.md  CHARTER_v5.md  CHARTER_v6.md  CONTAINER_CONSISTENCY_MERGE_ANALYSIS.md  CONTAINER_MIGRATION_CHANGELOG.md  DEPLOYMENT-GUIDE.md  DOCUMENTATION_STANDARDS.md  DOTFILES_AUDIT_REPORT.md  FINAL_VALIDATION_LOG.txt  HYPRLAND_REFACTOR_REPORT.md  MIGRATION-GUIDE.md  MIGRATION_PATTERNS.md  MIGRATION_STATUS.md  NANOCLAW-EXPANSION-GUIDE.md  QUICK-START.md  (+33 more)
workspace/business/estimate-automation/: 001_initial_schema.sql  pyproject.toml
workspace/business/estimate-automation/data/: materials_template.csv
workspace/business/estimate-automation/src/: main.py
workspace/business/estimate-automation/src/models/: markup.py  material.py
workspace/home/website_seo_scraper/: Dockerfile  README.md  pyproject.toml  run.py
workspace/home/website_seo_scraper/crawler/: settings.py
workspace/home/website_seo_scraper/data/: iheartwoodcraft.sitemap.jsonl  raw_iheartwoodcraft_com_2025-09-14.json  scoped_bozemanremodeling_com_2025-09-14.json  scoped_iheartwoodcraft_com_2025-09-14.json  scoped_raw_iheartwoodcraft_com_2025-09-14.json  seo_analysis_bozemanremodeler_com_2025-09-14.json  seo_analysis_bozemanremodeling_com_2025-09-14.json  seo_analysis_motifconstruction_com_2025-09-14.json  seo_analysis_www_rmfinish_com_2025-09-14.json  single.json
workspace/home/website_seo_scraper/extractor/: extractor.py
workspace/media/youtube-services/: api.py  pyproject.toml  transcript.py
workspace/media/youtube-services/transcript-formatter/: formatter.py  formatting_prompt.txt
workspace/media/youtube-services/transcript-formatter/cleaners/: __init__.py  basic.py  llm.py
workspace/projects/mailbot/: .gitignore  README.md  pyproject.toml  shell.nix  systemd-example.service  systemd-example.timer
(+3667 files in other folders)
