[project]
name = "site-crawler"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "scrapy==2.11.*",
  "tldextract>=5.1.2",
  "beautifulsoup4>=4.12.3",
  "lxml>=5.2.2",
  "requests>=2.32.3"  
]

[project.scripts]
site-crawl = "run:main"   # optional convenience entrypoint if you ever run it bare-metal

[tool.scrapy]
# empty on purpose; we use crawler/settings.py
